fix alignment issue file not downloadable

--- a/src/app/browse/browse/browse.component.css
+++ b/src/app/browse/browse/browse.component.css
@@ -3783,6 +3783,8 @@ ul.uploadAssetsClassifications li:hover path,
 }
 .deleteFolder {
   margin-right: 15px;
+  position: relative;
+  z-index: 2;
 }
 .deleteFolder svg{
   width: 20px;
